setup/backup/cleaned/routes-balance-fit-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cluster: ocp-prd
    environment: production
  labels:
    app: nginx
    app.kubernetes.io/instance: balance-fit-prod
    component: web
    environment: production
  name: balance-fit-route
  namespace: balance-fit-prd
spec:
  host: balance-fit.apps.ocp-prd.kohlerco.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nginx-service
    weight: 100
  wildcardPolicy: None
